--- a/useful_macros/Cargo.toml
+++ b/useful_macros/Cargo.toml
@@ -2,7 +2,7 @@
 name = "useful_macros"
 version = "0.1.0"
 edition = "2021"
-description = "My useful procedural macros"
+description = "My useful macros"
 license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
