--- a/useful_macros/Cargo.toml
+++ b/useful_macros/Cargo.toml
@@ -8,5 +8,5 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-proc_macros = { path="../proc_macros" }
+proc_macros = { path="../proc_macros", version="0.1.0" }
 
